--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li><a href="#">Обо мне</a></li>
+        <li><a href="#">Портфолио</a></li>
+        <li><a href="#">Цены</a></li>
+        <li><a href="#">Обратная связь</a></li>
+    </ul>
+    <ul>
+        <li><a href="tel:+7923-777-77-77">8 923 777-77-77</a></li>
+        <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></a></li>
+    </ul>
+   <div>
     <p>Aлександр Антропов</p>
     <h1>web-разработчик</h1>
-    
+   </div>
 </body>
 </html>
