--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
+    <header>
+        <nav>
     <ul>
         <li><a href="#">Обо мне</a></li>
         <li><a href="#">Портфолио</a></li>
         <li><a href="#">Цены</a></li>
         <li><a href="#">Обратная связь</a></li>
     </ul>
+    </nav>
     <ul>
         <li><a href="tel:+7923-777-77-77">8 923 777-77-77</a></li>
         <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></a></li>
     </ul>
-   <div>
+</header>
+<img src="img/photo.png" alt="Photo">
+<main> 
+    <div>
     <p>Aлександр Антропов</p>
     <h1>web-разработчик</h1>
    </div>
+</main>
+   <footer></footer>
 </body>
 </html>
