--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
     <header>
         <nav>
-    <ul>
-        <li><a href="#">Обо мне</a></li>
-        <li><a href="#">Портфолио</a></li>
-        <li><a href="#">Цены</a></li>
-        <li><a href="#">Обратная связь</a></li>
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
     </ul>
     </nav>
-    <ul>
-        <li><a href="tel:+7923-777-77-77">8 923 777-77-77</a></li>
-        <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></a></li>
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link"  href="tel:+7923-777-77-77">8 923 777-77-77</a></li>
+        <li class="nav-item"><a class="nav-link"  href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></a></li>
     </ul>
 </header>
-<img src="img/photo.png" alt="Photo">
+<img class="photo" src="img/photo.png" alt="Photo">
 <main> 
     <div>
-    <p>Aлександр Антропов</p>
-    <h1>web-разработчик</h1>
+    <p class="name">Aлександр Антропов</p>
+    <h1 class="h1">web-разработчик</h1>
    </div>
 </main>
    <footer></footer>
