--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
         <p class="name">Aлександр Антропов</p>
         <h1 class="h1">web-разработчик</h1>
        </div>
+       <div class="social">
+           <div class="social-item">
+               <p class="project"><span>Обсудить проект</span>
+                <span class="project-img"></span></p>
+           </div>
+           <div class="social-item">
+           <ul class="nav">
+            <li class="nav-item"><a class="nav-link"  href="#" target="_blank">VK</a></li>
+            <li class="nav-item"><a class="nav-link"  href="#" target="_blank">Instagram</a></a></li>
+            <li class="nav-item"><a class="nav-link"  href="#" target="_blank">Linkedin</a></a></li>
+        </ul>
+            </div>
+       </div>
+       <div class="skill">
+           <div class="skill-item"><h3 class="title-h3">FRONT-END</h3>
+            <p class="description">HTML+CSS+JS кодирование дизайнов любой сложности</p>
+        </div>
+           <div class="skill-item"><h3 class="title-h3">Back-end</h3>
+               <p class="description">Разработка сложной back-end логики для готового front-end</p>
+           </div>
+           <div class="skill-item"><h3 class="title-h3">WORDPRESS</h3>
+            <p class="description">Разработка сайтов - от блога до интернет магазина</p>
+           </div>
+           <div class="skill-item"><h3 class="title-h3">SEO продвижение</h3>
+            <p class="description">Качественное улучшение позиций сайта в поисковой выдаче</p>
+           </div>
+       </div>
     </main>
     </div>
 </div>    
