--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
             <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
         </ul>
         </nav>
-        <ul class="nav">
+        <ul class="nav nav-info">
             <li class="nav-item"><a class="nav-link"  href="tel:+7923-777-77-77">8 923 777-77-77</a></li>
             <li class="nav-item"><a class="nav-link"  href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></a></li>
         </ul>
     </header>
     <img class="photo" src="img/photo.png" alt="Photo">
-    <main> 
-        <div>
+    <main>
+        <div class="main">
+            <svg class="elipse elipse-main"  viewBox="0 0 253 253"  xmlns="http://www.w3.org/2000/svg">
+                <circle cx="126.5" cy="126.5" r="126.5" >
+            </svg>
+                <svg class="traingle" width="66" height="72" viewBox="0 0 66 72"  xmlns="http://www.w3.org/2000/svg">
+                    <path d="M33 0L65.909 71.25H0.0910339L33 0Z" >
+                </svg>      
         <p class="name">Aлександр Антропов</p>
         <h1 class="h1">web-разработчик</h1>
        </div>
@@ -37,7 +43,10 @@
                 <span class="project-img"></span></p>
            </div>
            <div class="social-item">
-           <ul class="nav">
+            <svg class="elipse elipse-nav" viewBox="0 0 253 253"  xmlns="http://www.w3.org/2000/svg">
+                <circle cx="126.5" cy="126.5" r="126.5" >
+            </svg>
+           <ul class="nav nav-info">
             <li class="nav-item"><a class="nav-link"  href="#" target="_blank">VK</a></li>
             <li class="nav-item"><a class="nav-link"  href="#" target="_blank">Instagram</a></a></li>
             <li class="nav-item"><a class="nav-link"  href="#" target="_blank">Linkedin</a></a></li>
@@ -59,6 +68,22 @@
            </div>
        </div>
     </main>
+    <section></section>
+    <section class="section-steps">
+        <div class="steps">
+            <div class="steps-item">
+                <p class="steps-title"><span>01</span>Вы заказываете сайт</p>
+                <p class="steps-description">связываетесь с мной или через заявку на сайте</p>
+            </div>
+            <div class="steps-item">
+                <p class="steps-title"><span>02</span>Вы заказываете сайт</p>
+                <p class="steps-description">связываетесь с мной или через заявку на сайте</p>
+            </div>
+            <div class="steps-item">
+                <p class="steps-title"><span>03</span>Вы заказываете сайт</p>
+                <p class="steps-description">связываетесь с мной или через заявку на сайте</p>
+            </div> 
+    </section>
     </div>
 </div>    
    <footer></footer>
